--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "^4.4.1",
     "lucide-react": "^0.515.0",
     "next": "^15.3.2",
+    "next-pwa": "^5.6.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
