--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,19 +1,19 @@
 {
   "name": "Sultan Medical CRM",
   "short_name": "SultanCRM",
+  "description": "A CRM system for Sultan Medical services",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#0275d8",
-  "orientation": "portrait",
   "icons": [
     {
-      "src": "/ic_launcher.png",
+      "src": "/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/ic_launcher.png",
+      "src": "/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
