--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.10",
+    "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.9.0",
     "debug": "^4.4.1",
+    "firebase": "^11.10.0",
     "lucide-react": "^0.515.0",
     "next": "^15.3.2",
     "next-pwa": "^5.6.0",
@@ -20,7 +21,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.10"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11"
   }
 }
