--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^15.4.1",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.9.0",
     "debug": "^4.4.1",
