--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "^15.3.2",
     "next-pwa": "^5.6.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
