--- a/package.json
+++ b/package.json
@@ -11,20 +11,22 @@
   "dependencies": {
     "@capacitor/app": "^7.0.1",
     "@next/bundle-analyzer": "^15.4.1",
-    "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.9.0",
+    "chart.js": "^4.5.1",
     "debug": "^4.4.1",
     "firebase": "^11.10.0",
     "lucide-react": "^0.515.0",
     "next": "^15.3.2",
     "next-pwa": "^5.6.0",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.13",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.13"
   }
 }
